Worked through layout issues. Ready to submit.

--- a/css-assignment-1/assignment1-brain.fm.css
+++ b/css-assignment-1/assignment1-brain.fm.css
@@ -1,46 +1,55 @@
-/* Styles for whole page. */
-body{
-    background-color:#1E36DF;
-    font-family: Arial, Helvetica, sans-serif;
-
+/* Universal styles */
+body {
+    background-color:#4915F8;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 input[type="button"]{
     color:white;
     border-radius: 25px;
-    padding:8px 20px;
+    padding:10px 20px;
     border:none;
     background-image:linear-gradient(to right,#FAAA25, #F47709);
     font-weight:700
 }
 
+p {
+    color:white;
+}
+
+img {
+    width: 100%;
+}
+
+
 /* Styles for header */
-.header{
+.header {
     display:flex;
     flex-direction: row;
     align-items:center;
     margin-bottom:200px;
 }
-a{
+
+.logo {
+    width: 150px;
+    margin-left: 30px;
+}
+
+a {
     color:#CECAC7;
     text-decoration:none;
+}
+
+/* Added hover just for fun */
+a:hover {
+    color: #FAAA25;
 }
 
 /*Styles for section-1*/
 .section-1{
     display:flex;
     flex-direction:row;
-}
-
-h1{
-    color:white;
-}
-
-span{
-    font-weight:100;
-    font-size: large;
-}
-.section-1 p{
-    color:#CECAC7;
+    align-items: center;
+    margin-left: 30px;
 }
 
 /*Styling for the middle section.*/
@@ -48,20 +57,33 @@ span{
     color:#CECAC7;
     width:100%;
     text-align:center;
-    padding: 100px 0;
+    padding: 200px 0 ;
     font-weight: bold;
-    font-size:larger;
+    font-size:25px;
 }
 
 /* Styles for section-2*/
-.section-2{
-    color:white;
-    display:flex;
-    flex-direction:row;
-
+.section2-images{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin: 10px 10px;
 }
 
-.section2-left{
-    display: flex;
-    align-items:center;
+.section2-words{
+    display:flex;
+    flex-direction:row;
+    font-size: 20px;
+}
+
+.exploremore-link{
+    color: white; 
+    border-bottom:4px solid white; 
+    font-weight:bold; 
+    font-size: 18px;
+}
+h3{
+    color:white;
+    font-size: 25px;
 }
